{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 461,
  "lineage": "0c751041-1389-eca6-ef2a-d9f9c490d87b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:870205216049:targetgroup/wordpres-ha-wp-tg/4cc0deb2773755fb",
            "arn_suffix": "targetgroup/wordpres-ha-wp-tg/4cc0deb2773755fb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:870205216049:targetgroup/wordpres-ha-wp-tg/4cc0deb2773755fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:870205216049:loadbalancer/app/wordpres-ha-alb/cdc1df3555a41677"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpres-ha-wp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pritunl",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pritunl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f46ccd1cbfb363e",
            "arn": "arn:aws:ec2:us-west-2:870205216049:instance/i-09e369e067c978bb2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e369e067c978bb2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "estudos-erick",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04141c243fd0ab584",
            "private_dns": "ip-10-11-2-14.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.2.14",
            "public_dns": "ec2-16-146-138-199.us-west-2.compute.amazonaws.com",
            "public_ip": "16.146.138.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05cd764cb37250d8f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070028c2fa51439df",
            "tags": {
              "Name": "wordpres-ha-pritunl-server"
            },
            "tags_all": {
              "Name": "wordpres-ha-pritunl-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03369517719544559"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.pritunl.data.aws_ssm_parameter.ubuntu_ami",
            "module.security.aws_security_group.pritunl",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_docker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f46ccd1cbfb363e",
            "arn": "arn:aws:ec2:us-west-2:870205216049:instance/i-03a649068a43971fe",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a649068a43971fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "estudos-erick",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075d11ea5f4af8908",
            "private_dns": "ip-10-11-4-224.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.4.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025c2300b4d6f9f8a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb19836df988748c",
            "tags": {
              "Name": "wordpres-ha-private-docker"
            },
            "tags_all": {
              "Name": "wordpres-ha-private-docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a497cc550545f56"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_docker.data.aws_ssm_parameter.ubuntu_ami",
            "module.security.aws_security_group.private_docker",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:security-group/sg-04bfed9c580b6b3f6",
            "description": "Permite trafego HTTP/HTTPS para o ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bfed9c580b6b3f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:security-group/sg-01ccaeeaf8617c22d",
            "description": "Permite trafego NFS do WordPress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ccaeeaf8617c22d",
            "ingress": [],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.pritunl",
            "module.security.aws_security_group.wordpress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:security-group/sg-08ce05df72b7c9c6a",
            "description": "Permite trafego do WordPress para o Memcached",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ce05df72b7c9c6a",
            "ingress": [],
            "name": "elasticache-sg",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.pritunl",
            "module.security.aws_security_group.wordpress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pritunl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:security-group/sg-03369517719544559",
            "description": "Permite acesso web e VPN ao Pritunl",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03369517719544559",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pritunl-sg",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:security-group/sg-02a497cc550545f56",
            "description": "Permite acesso do Pritunl (VPN)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a497cc550545f56",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.100.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "private-docker-sg",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:security-group/sg-0f5d311afe2fa03cf",
            "description": "Permite trafego do WordPress para o MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5d311afe2fa03cf",
            "ingress": [],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.pritunl",
            "module.security.aws_security_group.wordpress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:security-group/sg-0c4806c506a51d885",
            "description": "Permite trafego do ALB e acesso SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4806c506a51d885",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04bfed9c580b6b3f6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-ec2-sg",
            "name_prefix": "",
            "owner_id": "870205216049",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.pritunl",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0030abb0f6af0224a",
            "arn": "arn:aws:ec2:us-west-2:870205216049:elastic-ip/eipalloc-0030abb0f6af0224a",
            "association_id": "eipassoc-0efcf7ada635024e3",
            "domain": "vpc",
            "id": "eipalloc-0030abb0f6af0224a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c63f7519676d17ed",
            "private_dns": "ip-10-11-1-24.us-west-2.compute.internal",
            "private_ip": "10.11.1.24",
            "public_dns": "ec2-16-145-104-97.us-west-2.compute.amazonaws.com",
            "public_ip": "16.145.104.97",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c0c232168fd5ed9",
            "arn": "arn:aws:ec2:us-west-2:870205216049:elastic-ip/eipalloc-06c0c232168fd5ed9",
            "association_id": "eipassoc-0d45fdd50c84d7a0c",
            "domain": "vpc",
            "id": "eipalloc-06c0c232168fd5ed9",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0075e103de97266fb",
            "private_dns": "ip-10-11-2-16.us-west-2.compute.internal",
            "private_ip": "10.11.2.16",
            "public_dns": "ec2-44-253-181-120.us-west-2.compute.amazonaws.com",
            "public_ip": "44.253.181.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:internet-gateway/igw-09c8e783e67adeba0",
            "id": "igw-09c8e783e67adeba0",
            "owner_id": "870205216049",
            "tags": {
              "Name": "wordpres-ha-igw"
            },
            "tags_all": {
              "Name": "wordpres-ha-igw"
            },
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0030abb0f6af0224a",
            "association_id": "eipassoc-0efcf7ada635024e3",
            "connectivity_type": "public",
            "id": "nat-079867d49dc971c54",
            "network_interface_id": "eni-0c63f7519676d17ed",
            "private_ip": "10.11.1.24",
            "public_ip": "16.145.104.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f020086e88d9390d",
            "tags": {
              "Name": "wordpres-ha-nat-gw-1"
            },
            "tags_all": {
              "Name": "wordpres-ha-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c0c232168fd5ed9",
            "association_id": "eipassoc-0d45fdd50c84d7a0c",
            "connectivity_type": "public",
            "id": "nat-06d1a570a93fe2112",
            "network_interface_id": "eni-0075e103de97266fb",
            "private_ip": "10.11.2.16",
            "public_ip": "44.253.181.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070028c2fa51439df",
            "tags": {
              "Name": "wordpres-ha-nat-gw-2"
            },
            "tags_all": {
              "Name": "wordpres-ha-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:route-table/rtb-0fc60debf2e95bc3a",
            "id": "rtb-0fc60debf2e95bc3a",
            "owner_id": "870205216049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079867d49dc971c54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpres-ha-private-rt-1"
            },
            "tags_all": {
              "Name": "wordpres-ha-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:subnet/subnet-00fca06617170d7d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fca06617170d7d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpres-ha-private-subnet-1"
            },
            "tags_all": {
              "Name": "wordpres-ha-private-subnet-1"
            },
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:subnet/subnet-0bb19836df988748c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.11.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb19836df988748c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpres-ha-private-subnet-2"
            },
            "tags_all": {
              "Name": "wordpres-ha-private-subnet-2"
            },
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:subnet/subnet-0f020086e88d9390d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f020086e88d9390d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpres-ha-public-subnet-1"
            },
            "tags_all": {
              "Name": "wordpres-ha-public-subnet-1"
            },
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:subnet/subnet-070028c2fa51439df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070028c2fa51439df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870205216049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpres-ha-public-subnet-2"
            },
            "tags_all": {
              "Name": "wordpres-ha-public-subnet-2"
            },
            "vpc_id": "vpc-0bee0ab7dfc86fc18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:870205216049:vpc/vpc-0bee0ab7dfc86fc18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-07c1cf0918d2d604a",
            "default_route_table_id": "rtb-05d1c4f895bed82f4",
            "default_security_group_id": "sg-08249b281d69b8082",
            "dhcp_options_id": "dopt-020e8f750f80a0587",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bee0ab7dfc86fc18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d1c4f895bed82f4",
            "owner_id": "870205216049",
            "tags": {
              "Name": "wordpres-ha-vpc"
            },
            "tags_all": {
              "Name": "wordpres-ha-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}